mejoro styles y saco position:absolute, agrego secciones

--- a/contacto.html
+++ b/contacto.html
@@ -13,11 +13,7 @@
 </head>
 <body>
     <header class="encabezado">
-        <h1 class="tituloEncabezado">CARNITAS</h1>
         <nav>
-            <a href="">
-                <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
-            </a>
             <div class="contenedorNav">
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
                 <div class="menuNav">
@@ -27,33 +23,51 @@
                     <span> <a href="contacto.html"> Contactanos </a></span>
                 </div>
             </div>
+            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
+
         </nav>
+        <h1 class="tituloEncabezado">CARNITAS</h1>
+
     </header>
 
     <main class="seccionMain">
-        <section class="seccionEncabezado">
+        <div class="mainEncabezado">
             <h2>CONTACTANOS</h2>
-
-            <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
+            <div class="lineaEncabezado"></div>
+        </div>
+        <section>
+            <div class="contenedorContenido">
+                <div class="franjaRoja"></div>
+                <div class="listaComida">
+                    <ul>
+                        <li>Telefono fijo  : 4567 - 1234 </li>
+                        <li>whatsapp : +54 11 34455667</li>
+                        <li>E-mail : carnitas@gmail.com</li>
+                    </ul>
+                </div>
+                <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
+            </div>
         </section>
     </main>
 
-    <footer class="footerLinks">
+    <footer>
         <div class="lineaFooterRosa"></div>
         <div class="lineaFooterRoja"></div>
         <div class="lineaFooterNaranja"></div>
-        <div class="contenedorNavFooter">
-            <a href="index.html">Menu</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="sucursales.html">Sucursales</a>
-            <a href="contacto.html">Contactanos</a>
+        <div class="contenidoFooter">
+            <div class="contenedorNavFooter">
+                <a href="index.html">Menu</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="sucursales.html">Sucursales</a>
+                <a href="contacto.html">Contactanos</a>
+            </div>
+            <div class="contenedorRedes">
+                <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
+                <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
+                <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+            </div>
+            <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
-        <div class="contenedorRedes">
-            <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
-            <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
-            <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
-        </div>
-        <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
     </footer>
 </body>
 </html>
