--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 </head>
 <body>
     <header class="encabezado">
-        <h1 class="tituloEncabezado">CARNITAS</h1>
-        <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
-        <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
         <nav>
-            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
             <div class="contenedorNav">
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
                 <div class="menuNav">
@@ -27,15 +23,21 @@
                     <span> <a href="contacto.html"> Contactanos </a></span>
                 </div>
             </div>
+            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
 
         </nav>
+        <h1 class="tituloEncabezado">CARNITAS</h1>
+        <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
+        <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
     </header>
     <main>
         <div class="mainEncabezado">
             <h2>Nuestras comidas</h2>
+            <div class="lineaEncabezado"></div>
         </div>
 
         <section>
+            
             <div class="contenedorComidaFondo">
                 <img class="imgFondo" src="img/burrito_fondo.jpg" alt="imagen de fondo burrito">
                 <h3>Burritos</h3>
@@ -87,18 +89,20 @@
         <div class="lineaFooterRosa"></div>
         <div class="lineaFooterRoja"></div>
         <div class="lineaFooterNaranja"></div>
-        <div class="contenedorNavFooter">
-            <a href="index.html">Menu</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="sucursales.html">Sucursales</a>
-            <a href="contacto.html">Contactanos</a>
+        <div class="contenidoFooter">
+            <div class="contenedorNavFooter">
+                <a href="index.html">Menu</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="sucursales.html">Sucursales</a>
+                <a href="contacto.html">Contactanos</a>
+            </div>
+            <div class="contenedorRedes">
+                <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
+                <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
+                <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+            </div>
+            <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
-        <div class="contenedorRedes">
-            <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
-            <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
-            <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
-        </div>
-        <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
     </footer>
 </body>
 </html>
