--- a/nosotros.html
+++ b/nosotros.html
@@ -12,10 +12,8 @@
     <link rel="icon" href="img/mexican-skull.png">
 </head>
 <body>
-    <header>
-        <h1 class="tituloEncabezado">CARNITAS</h1>
+    <header class="encabezado">
         <nav>
-            <a href=""><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
             <div class="contenedorNav">
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
                 <div class="menuNav">
@@ -25,38 +23,48 @@
                     <span> <a href="contacto.html"> Contactanos </a></span>
                 </div>
             </div>
+            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
+
         </nav>
+        <h1 class="tituloEncabezado">CARNITAS</h1>
+
     </header>
     <main class="seccionMain">
-        <section class="seccionEncabezado">
+        <div class="mainEncabezado">
             <h2>NOSOTROS</h2>
-            <div class="pNosotros">
+            <div class="lineaEncabezado"></div>
+        </div>
+        <section>
+            <div class="contenedorContenido">
+                <div class="franjaRosa"></div>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum 
                     deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, 
                     similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
                     Et harum quidem rerum facilis est et expedita distinctio. 
                     Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus </p>
+                    <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
             </div>
-            <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
         </section>
     </main>
 
-    <footer class="footerLinks">
+    <footer>
         <div class="lineaFooterRosa"></div>
         <div class="lineaFooterRoja"></div>
         <div class="lineaFooterNaranja"></div>
-        <div class="contenedorNavFooter">
-            <a href="index.html">Menu</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="sucursales.html">Sucursales</a>
-            <a href="contacto.html">Contactanos</a>
+        <div class="contenidoFooter">
+            <div class="contenedorNavFooter">
+                <a href="index.html">Menu</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="sucursales.html">Sucursales</a>
+                <a href="contacto.html">Contactanos</a>
+            </div>
+            <div class="contenedorRedes">
+                <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
+                <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
+                <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+            </div>
+            <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
-        <div class="contenedorRedes">
-            <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
-            <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
-            <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
-        </div>
-        <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
     </footer>
 </body>
 </html>
