agrego detalles en seccion sucursales

--- a/sucursales.html
+++ b/sucursales.html
@@ -35,14 +35,22 @@
             <div class="lineaEncabezado"></div>
         </div>
         <section>
-            <h3 class="sucursalesH3">Sucursal de Recoleta</h3>
+            <div class="encabezadoSucursales">
+                <div class="lineaSucursales" ></div>
+                <h3 class="sucursalesH3">Recoleta</h3>
+                <div class="lineaSucursales"></div>
+            </div>
             <div class="contenedorSucursales1">
                 <div class="franjaNaranja"></div>
             </div>
         </section>
 
         <section>
-            <h3 class="sucursalesH3">Sucursal de Palermo</h3>
+            <div class="encabezadoSucursales">
+                <div class="lineaSucursales" ></div>
+                <h3 class="sucursalesH3">Palermo</h3>
+                <div class="lineaSucursales"></div>
+            </div>
             <div class="contenedorSucursales2">
                 <div class="franjaRoja"></div>
             </div>
