modificaciones de diseño

--- a/contacto.html
+++ b/contacto.html
@@ -26,13 +26,12 @@
             <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
 
         </nav>
-        <h1 class="tituloEncabezado">CARNITAS</h1>
+        <h1 class="tituloEncabezado">CONTACTANOS</h1>
 
     </header>
 
     <main class="seccionMain">
         <div class="mainEncabezado">
-            <h2>CONTACTANOS</h2>
             <div class="lineaEncabezado"></div>
         </div>
         <section>
