--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
             <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
 
         </nav>
-        <h1 class="tituloEncabezado">CARNITAS</h1>
-        <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
-        <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
+        <div class="textoEncabezado">
+            <h1 class="tituloEncabezado">CARNITAS</h1>
+        </div>
+        <div class="textoEncabezado">
+            <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
+        </div>
+        <div class="textoEncabezado">
+            <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
+        </div>
     </header>
     <main>
         <div class="mainEncabezado">
