--- a/nosotros.html
+++ b/nosotros.html
@@ -26,12 +26,11 @@
             <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
 
         </nav>
-        <h1 class="tituloEncabezado">CARNITAS</h1>
+        <h1 class="tituloEncabezado">NOSOTROS</h1>
 
     </header>
     <main class="seccionMain">
         <div class="mainEncabezado">
-            <h2>NOSOTROS</h2>
             <div class="lineaEncabezado"></div>
         </div>
         <section>
