--- a/nosotros.html
+++ b/nosotros.html
@@ -36,12 +36,16 @@
         <section>
             <div class="contenedorContenido">
                 <div class="franjaRosa"></div>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum 
-                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, 
-                    similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
-                    Et harum quidem rerum facilis est et expedita distinctio. 
-                    Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus </p>
+                <div class="parrafoNosotros">
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum 
+                        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, 
+                        similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
+                        Et harum quidem rerum facilis est et expedita distinctio. 
+                        Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus </p>
+                </div>
+                <div>
                     <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
+                </div>
             </div>
         </section>
     </main>
