--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <title>Contacto</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/mexican-skull.png">
+    <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
     <header class="encabezado">
@@ -61,9 +61,9 @@
                 <a href="contacto.html">Contactanos</a>
             </div>
             <div class="contenedorRedes">
-                <a href=""><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
-                <a href=""><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
-                <a href=""><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+                <a href="https://web.whatsapp.com/"><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
+                <a href="https://www.facebook.com/"><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
+                <a href="https://www.instagram.com/"><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
             </div>
             <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
