agrego imagenes en nosotros, modifico footer

--- a/nosotros.html
+++ b/nosotros.html
@@ -48,6 +48,13 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="mangaImagenes">
+                <div class="img1"></div>
+                <div class="img2"></div>
+                <div class="img3"></div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -65,6 +72,12 @@
                 <a href="https://web.whatsapp.com/"><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
                 <a href="https://www.facebook.com/"><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
                 <a href="https://www.instagram.com/"><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+                <h3>Bancos de Imagenes utilizados : </h3>
+                <ul>
+                    <li>https://pixabay.com</li>
+                    <li>https://www.vecteezy.com</li>
+                    <li>https://www.flaticon.com</li>
+                </ul>
             </div>
             <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
