--- a/contacto.html
+++ b/contacto.html
@@ -64,6 +64,12 @@
                 <a href="https://web.whatsapp.com/"><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
                 <a href="https://www.facebook.com/"><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
                 <a href="https://www.instagram.com/"><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+                <h3>Bancos de Imagenes utilizados : </h3>
+                <ul>
+                    <li>https://pixabay.com</li>
+                    <li>https://www.vecteezy.com</li>
+                    <li>https://www.flaticon.com</li>
+                </ul>
             </div>
             <img class="imgCalaveraFooter" src="img/calavera_negativo.png" alt="imagen calavera">
         </div>
