agrego direccion suc, y bebidas

--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            
+            <div class="contenedorComidaFondo">
+                <div>
+                    <img class="imgFondo" src="img/botellas_fondo.jpg" alt="imagen de fondo burrito">
+                    <div class="contenidoComida">
+                        <div class="sectorComida">
+                            <div class="franjaCeleste"></div>
+                            <div class="separadorComida">
+                                <h3>Bebidas</h3>
+                                <div class="listaComida">
+                                    <ul>
+                                        <li> Tequila</li>
+                                        <li> Tejuino </li>
+                                        <li> Mezcal </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <img class="imgPrincipal" src="img/botellas.jpg" alt="imagen burrito">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="lineaFooterRosa"></div>
