--- a/nosotros.html
+++ b/nosotros.html
@@ -37,11 +37,13 @@
             <div class="contenedorContenido">
                 <div class="franjaRosa"></div>
                 <div class="parrafoNosotros">
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum 
-                        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, 
-                        similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
-                        Et harum quidem rerum facilis est et expedita distinctio. 
-                        Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus </p>
+                    <p>Iniciamos este gran camino en 2010 con la intencion de traer nuestras costumbres, poder trasmitir nuestra cultura a este pais.
+                        Queremos que las personas que pasen por la puerta de entrada sientan que entran a Mexico, tengan esa sensacion de fiesta y felicidad que 
+                        la comida nos da en nuestro pais.
+                    </p>
+                    <p>
+                        Somos <em>Apasionados</em> de la comida, de los sabores, de los condimentos usados en nuestro tierra y es eso lo que queremos traer.
+                    </p>
                 </div>
                 <div>
                     <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
