--- a/sucursales.html
+++ b/sucursales.html
@@ -27,8 +27,8 @@
 
         </nav>
         <h1 class="tituloEncabezado">SUCURSALES</h1>
-
     </header>
+
     <main class="seccionMain">
         <div class="mainEncabezado">
             <div class="lineaEncabezado"></div>
@@ -39,8 +39,22 @@
                 <h3 class="sucursalesH3">Recoleta</h3>
                 <div class="lineaSucursales"></div>
             </div>
-            <div class="contenedorSucursales1">
-            </div>
+                <div class="sucursal">
+
+                    <div class="direccion listaComida">
+                        <ul>
+                            <li> Direccion : Vicente López 2176 </li> 
+                            
+                            <ul>
+                                <li>Lun a Jue de 18 a 1</li>
+                                <li>Vier a Dom de 18 a 2 </li>
+                            </ul>
+                        </ul>
+                    </div>
+                    <div class="contenedorSucursales1">
+                    </div>
+                </div>
+
         </section>
 
         <section>
@@ -49,7 +63,18 @@
                 <h3 class="sucursalesH3">Palermo</h3>
                 <div class="lineaSucursales"></div>
             </div>
-            <div class="contenedorSucursales2">
+            <div class="sucursal">
+                <div class="direccion listaComida">
+                    <ul>
+                        <li> Direccion : Av. Santa Fe 4202</li>
+                        <ul>
+                            <li>Lun a Jue de 18 a 1</li>
+                            <li>Vier a Dom de 18 a 2 </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div class="contenedorSucursales2">
+                </div>
             </div>
         </section>
     </main>
