--- a/sucursales.html
+++ b/sucursales.html
@@ -43,11 +43,11 @@
 
                     <div class="direccion listaComida">
                         <ul>
-                            <li> Direccion : Vicente López 2176 </li> 
+                            <li> <div class="circuloRosa"></div> Direccion : Vicente López 2176 </li> 
                             
                             <ul>
-                                <li>Lun a Jue de 18 a 1</li>
-                                <li>Vier a Dom de 18 a 2 </li>
+                                <li><div class="circuloRojo"></div>Lun a Jue de 18 a 1</li>
+                                <li><div class="circuloNaranja"></div>Vier a Dom de 18 a 2 </li>
                             </ul>
                         </ul>
                     </div>
@@ -66,10 +66,11 @@
             <div class="sucursal">
                 <div class="direccion listaComida">
                     <ul>
-                        <li> Direccion : Av. Santa Fe 4202</li>
+                        <li> <div class="circuloRosa"></div> Direccion : Av. Santa Fe 4202 </li> 
+                        
                         <ul>
-                            <li>Lun a Jue de 18 a 1</li>
-                            <li>Vier a Dom de 18 a 2 </li>
+                            <li><div class="circuloRojo"></div>Lun a Jue de 18 a 1</li>
+                            <li><div class="circuloNaranja"></div>Vier a Dom de 18 a 2 </li>
                         </ul>
                     </ul>
                 </div>
