agrego tipografia correcta

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Medula+One&family=Mulish&display=swap" rel="stylesheet">
     <title>Contacto</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/taco_favicon.png">
@@ -36,12 +36,12 @@
         </div>
         <section>
             <div class="contenedorContenido">
-                <div class="franjaRoja"></div>
-                <div class="listaComida">
+                <div class="franjaCeleste"></div>
+                <div class="direccion listaComida">
                     <ul>
-                        <li>Telefono fijo  : 4567 - 1234 </li>
-                        <li>whatsapp : +54 11 34455667</li>
-                        <li>E-mail : carnitas@gmail.com</li>
+                        <li><div class="circuloRosa"></div>Telefono fijo  : 4567 - 1234 </li>
+                        <li><div class="circuloRojo"></div>whatsapp : +54 11 34455667</li>
+                        <li><div class="circuloNaranja"></div>E-mail : carnitas@gmail.com</li>
                     </ul>
                 </div>
                 <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
