--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
                     <span> <a href="contacto.html"> Contactanos </a></span>
                 </div>
             </div>
-            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
-
+            <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
         </nav>
         <div class="textoEncabezado">
             <h1 class="tituloEncabezado">CARNITAS</h1>
         </div>
-        <div class="textoEncabezado">
+        <div class="textoEncabezado ">
             <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
         </div>
-        <div class="textoEncabezado">
+        <div class="textoEncabezado ">
             <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
         </div>
     </header>
