--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <span> <a href="nosotros.html"> Nosotros </a></span>
                     <span> <a href="sucursales.html"> Sucursales </a></span>
                     <span> <a href="contacto.html"> Contactanos </a></span>
+                    <span> <a href="pedido.html"> Pedido </a></span>
                 </div>
             </div>
             <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
