--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/main.css">
     
-    
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
     <header class="encabezado">
         <nav>
+            <div class="menuBurga">
+                <input type="checkbox" id="menu">  
+                <label for="menu"> ☰ </label>
+                <ul>
+                  <li> <a href="index.html"> Menu </a></li>
+                  <li> <a href="nosotros.html"> Nosotros </a></li>
+                  <li> <a href="sucursales.html"> Sucursales </a></li>
+                  <li> <a href="contacto.html"> Contactanos </a></li>
+                  <li> <a href="pedido.html"> Pedido </a></li>
+                </ul>
+            </div>
             <div class="contenedorNav">
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
                 <div class="menuNav">
