agrego menu burga

--- a/index.html
+++ b/index.html
@@ -18,39 +18,32 @@
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
-    <header class="encabezado">
+    <header>
         <nav>
-            <div class="menuBurga">
-                <input type="checkbox" id="menu">  
-                <label for="menu"> ☰ </label>
-                <ul>
-                  <li> <a href="index.html"> Menu </a></li>
-                  <li> <a href="nosotros.html"> Nosotros </a></li>
-                  <li> <a href="sucursales.html"> Sucursales </a></li>
-                  <li> <a href="contacto.html"> Contactanos </a></li>
-                  <li> <a href="pedido.html"> Pedido </a></li>
-                </ul>
-            </div>
-            <div class="contenedorNav">
+            <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
-                <div class="menuNav">
-                    <span> <a href="index.html"> Menu </a></span>
-                    <span> <a href="nosotros.html"> Nosotros </a></span>
-                    <span> <a href="sucursales.html"> Sucursales </a></span>
-                    <span> <a href="contacto.html"> Contactanos </a></span>
-                    <span> <a href="pedido.html"> Pedido </a></span>
-                </div>
             </div>
-            <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
+            <input type="checkbox" id="check">  
+            <label for="check" class="bar-btn"> ☰ </label>
+            <ul class="nav-menu">
+              <li> <a href="index.html"> Menu </a></li>
+              <li> <a href="nosotros.html"> Nosotros </a></li>
+              <li> <a href="sucursales.html"> Sucursales </a></li>
+              <li> <a href="contacto.html"> Contactanos </a></li>
+              <li> <a href="pedido.html"> Pedido </a></li>
+            </ul>
         </nav>
-        <div class="textoEncabezado">
-            <h1 class="tituloEncabezado">CARNITAS</h1>
-        </div>
-        <div class="textoEncabezado ">
-            <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
-        </div>
-        <div class="textoEncabezado ">
-            <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
+        <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
+        <div>
+            <div >
+                <h1 class="tituloEncabezado">CARNITAS</h1>
+            </div>
+            <div >
+                <h2 class="subtituloEncabezado">BIENVENIDOS AL RESTAURANTE DE COMIDA MEXICANA</h2>
+            </div>
+            <div >
+                <p class="parrafoEncabezado">VIVI LA EXPERIENCIA DE COMER EN MEXICO</p>
+            </div>
         </div>
     </header>
     <main>
