--- a/sucursales.html
+++ b/sucursales.html
@@ -19,18 +19,20 @@
 <body>
     <header class="encabezado">
         <nav>
-            <div class="contenedorNav">
+            <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
-                <div class="menuNav">
-                    <span> <a href="index.html"> Menu </a></span>
-                    <span> <a href="nosotros.html"> Nosotros </a></span>
-                    <span> <a href="sucursales.html"> Sucursales </a></span>
-                    <span> <a href="contacto.html"> Contactanos </a></span>
-                    <span> <a href="pedido.html"> Pedido </a></span>
-                </div>
             </div>
-            <a href="index.html"><img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion"></a>
-
+            <input type="checkbox" id="check">  
+            <label for="check" class="bar-btn"> ☰ </label>
+            <ul class="nav-menu">
+            <li> <a href="index.html"> Menu </a></li>
+            <li> <a href="nosotros.html"> Nosotros </a></li>
+            <li> <a href="sucursales.html"> Sucursales </a></li>
+            <li> <a href="contacto.html"> Contactanos </a></li>
+            <li> <a href="pedido.html"> Pedido </a></li>
+            </ul>
+        </nav>
+        <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
         </nav>
         <h1 class="tituloEncabezado">SUCURSALES</h1>
     </header>
