arreglos de los otros modulos responsive

--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado_modulos">
         <nav>
             <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
-        <h1 class="tituloEncabezado">CONTACTANOS</h1>
+        <h1 class="tituloEncabezado">CONTACTO</h1>
 
     </header>
 
