--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,8 @@
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
-    <nav>
+    <header class="encabezado_modulos">
+        <nav>
             <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
             </div>
@@ -34,7 +35,6 @@
         </nav>
         <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
         <h1 class="tituloEncabezado">NOSOTROS</h1>
-
     </header>
     <main class="seccionMain">
         <div class="mainEncabezado">
