--- a/pedido.html
+++ b/pedido.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado_modulos">
         <nav>
             <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
