--- a/sucursales.html
+++ b/sucursales.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="img/taco_favicon.png">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado_modulos">
         <nav>
             <div>
                 <img class="imagenCalavera" src="img/calavera_negativo.png" alt="imagen de calavera">
@@ -34,7 +34,7 @@
         </nav>
         <img class="imgBanderines" src="img/banderines.png" alt="banderines de decoracion">
         </nav>
-        <h1 class="tituloEncabezado">SUCURSALES</h1>
+        <h1 class="tituloEncabezado h1_sucursal">Sucursales</h1>
     </header>
 
     <main class="seccionMain">
