agrego pagina pedido

--- a/pedido.html
+++ b/pedido.html
@@ -40,12 +40,125 @@
     </header>
 
     <main>
-        <div class="mainEncabezado">
-            <div class="lineaEncabezado"></div>
+        <div class="grid-container">
+            <h3>
+                Burritos
+            </h3>
+            <div class="grid-item">
+                <p>Tradicionales</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Burritos de pollo</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Burritos de arroz</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
         </div>
-        
-    </main>
+        <div class="grid-container">
+            <h3>
+                Nachos
+            </h3>
+            <div class="grid-item">
+                <p>Nachos con wacamole</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Nachos con cheddar</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
 
+        </div>
+        <div class="grid-container">
+            <h3>
+                Tacos
+            </h3>
+            <div class="grid-item">
+                <p>Tacos set</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Tacos de pollo</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Tacos de res</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+        </div>
+        <div class="grid-container">
+            <h3>
+                Bebidas
+            </h3>
+            <div class="grid-item">
+                <p>Tequila</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Tejuino</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+            <div class="grid-item">
+                <p>Mezcal</p>
+                <div class="contador"> 
+                    <button class="btn-contador naranja"> + </button> 
+                    <div> 0 </div>  
+                    <button class="btn-contador rojo"> - </button> 
+                </div>
+            </div>
+
+        <div class="lineaEncabezado"></div>
+        <div class="grid-item">
+            <p> TOTAL : $ </p>
+            <div> 0 </div>
+        </div>
+        <div class="contenedor-btn">
+            <button class="btn-pedir"> PEDIR  </button>
+        </div>
+
+    </main>
     <footer>
         <div class="lineaFooterRosa"></div>
         <div class="lineaFooterRoja"></div>
@@ -58,9 +171,9 @@
                 <a href="contacto.html">Contactanos</a>
             </div>
             <div class="contenedorRedes">
-                <a href="https://web.whatsapp.com/"><img class="imgIcon"src="img/whatsapp.png" alt="link de whatsapp"></a>
-                <a href="https://www.facebook.com/"><img class="imgIcon"src="img/facebook.png" alt="link de facebook"></a>
-                <a href="https://www.instagram.com/"><img class="imgIcon"src="img/instagram.png" alt="link de instagram"></a>
+                <a href="https://web.whatsapp.com/"><img class="imgIcon" src="img/whatsapp.png" alt="link de whatsapp"></a>
+                <a href="https://www.facebook.com/"><img class="imgIcon" src="img/facebook.png" alt="link de facebook"></a>
+                <a href="https://www.instagram.com/"><img class="imgIcon" src="img/instagram.png" alt="link de instagram"></a>
                 <h3>Bancos de Imagenes utilizados : </h3>
                 <ul>
                     <li>https://pixabay.com</li>
