pagina pedido responsive

--- a/pedido.html
+++ b/pedido.html
@@ -39,7 +39,7 @@
         
     </header>
 
-    <main>
+    <main class="mainPedido">
         <div class="grid-container">
             <h3>
                 Burritos
