pagina pedido AGREGO ingredientes primera parte

--- a/pedido.html
+++ b/pedido.html
@@ -45,12 +45,15 @@
                 Burritos
             </h3>
             <div class="grid-item">
-                <p>Tradicionales</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tradicionales</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
                 <p>Burritos de pollo</p>
@@ -148,7 +151,7 @@
                     <button class="btn-contador rojo"> - </button> 
                 </div>
             </div>
-
+        
         <div class="lineaEncabezado"></div>
         <div class="grid-item">
             <p> TOTAL : $ </p>
