pagina pedido corrigo total

--- a/pedido.html
+++ b/pedido.html
@@ -56,20 +56,26 @@
                 <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Burritos de pollo</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Burritos de pollo</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Burritos de arroz</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Burritos de arroz</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
         </div>
         <div class="grid-container">
@@ -77,20 +83,26 @@
                 Nachos
             </h3>
             <div class="grid-item">
-                <p>Nachos con wacamole</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Nachos con wacamole</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Nachos con cheddar</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Nachos con cheddar</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
 
         </div>
@@ -99,28 +111,37 @@
                 Tacos
             </h3>
             <div class="grid-item">
-                <p>Tacos set</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tacos set</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Tacos de pollo</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tacos de pollo</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Tacos de res</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tacos de res</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
         </div>
         <div class="grid-container">
@@ -128,34 +149,43 @@
                 Bebidas
             </h3>
             <div class="grid-item">
-                <p>Tequila</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tequila</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Tejuino</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Tejuino</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
             <div class="grid-item">
-                <p>Mezcal</p>
-                <div class="contador"> 
-                    <button class="btn-contador naranja"> + </button> 
-                    <div> 0 </div>  
-                    <button class="btn-contador rojo"> - </button> 
+                <div class="comida">
+                    <p>Mezcal</p>
+                    <div class="contador"> 
+                        <button class="btn-contador naranja"> + </button> 
+                        <div> 0 </div>  
+                        <button class="btn-contador rojo"> - </button> 
+                    </div>
                 </div>
+                <p class="ingredientes"> ingredientes : contenido de los ingredientes ..... $ precio </p>
             </div>
         
         <div class="lineaEncabezado"></div>
-        <div class="grid-item">
+        <div class="totalPedido">
             <p> TOTAL : $ </p>
-            <div> 0 </div>
+            <div>0</div>
         </div>
         <div class="contenedor-btn">
             <button class="btn-pedir"> PEDIR  </button>
