--- a/contacto.html
+++ b/contacto.html
@@ -45,9 +45,9 @@
                 <div class="franjaCeleste"></div>
                 <div class="direccion listaComida">
                     <ul>
-                        <li><div class="circuloRosa"></div>Telefono fijo  : 4567 - 1234 </li>
-                        <li><div class="circuloRojo"></div>whatsapp : +54 11 34455667</li>
-                        <li><div class="circuloNaranja"></div>E-mail : carnitas@gmail.com</li>
+                        <li><div class="circuloRosa"></div>    <p>  Telefono fijo  : 4567 - 1234 </p> </li>
+                        <li><div class="circuloRojo"></div>    <p>  whatsapp : +54 11 34455667 </p></li>
+                        <li><div class="circuloNaranja"></div> <p>  E-mail : carnitas@gmail.com</p>  </li>
                     </ul>
                 </div>
                 <img class="imgCalaveraNos" src="img/mexican-skull.png" alt="imagen de calavera">
